fix alignment and width on home page;

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -1,4 +1,5 @@
 .about {
+  width: 75%;
   .events {
     display: flex;
     justify-content: space-around;
@@ -9,6 +10,14 @@
 
     @include sm {
       flex-direction: column;
+    }
+  }
+
+  @include sm {
+    width: 100%;
+
+    h2 {
+      text-align: center;
     }
   }
 }
