--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -47,7 +47,7 @@ body {
   }
 
   .facilities {
-    width: 100%;
+    width: 75%;
     .image-modals {
       display: grid;
       grid-template-columns: auto auto;
@@ -59,6 +59,13 @@ body {
       @include sm {
         grid-template-columns: auto;
       }
+    }
+
+    @include sm {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
   }
 
